tests/reference/asr-test_const_list_reverse-2df1a6f.stderr
semantic error: cannot reverse a const list
 --> tests/errors/test_const_list_reverse.py:7:5
  |
7 |     CONST_INTEGER_LIST.reverse()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
